# wave-tui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  herdr-plugin.toml  install.sh  justfile
.github/workflows/: pages.yml  release.yml
.mikan/: config.yaml
.mikan/backlog/: MIK-014.md  MIK-015.md  MIK-016.md  MIK-017.md  MIK-018.md  MIK-019.md  MIK-020.md  MIK-021.md  MIK-022.md  MIK-023.md  MIK-024.md  MIK-025.md  MIK-026.md  MIK-027.md  MIK-028.md  MIK-029.md
.mikan/completed/: MIK-001.md  MIK-002.md  MIK-003.md  MIK-004.md  MIK-005.md  MIK-006.md  MIK-007.md  MIK-008.md  MIK-009.md  MIK-010.md  MIK-011.md  MIK-012.md  MIK-013.md  MIK-018.md  MIK-019.md  MIK-020.md  MIK-021.md  MIK-022.md  MIK-023.md  MIK-024.md  MIK-025.md  MIK-026.md  MIK-027.md  MIK-028.md  MIK-029.md  MIK-030.md  MIK-031.md  MIK-032.md  MIK-033.md  MIK-034.md  MIK-035.md  MIK-036.md  MIK-037.md  MIK-038.md  MIK-039.md  MIK-040.md
.mikan/ready/: MIK-001.md  MIK-002.md  MIK-003.md  MIK-004.md  MIK-005.md  MIK-006.md  MIK-007.md  MIK-008.md  MIK-009.md  MIK-010.md  MIK-011.md  MIK-012.md
.mikan/templates/: issue.md
docs/: SPEC.md  audio-spike.md  herdr-plugin.md  implementation-guidelines.md  index.html  ui-design-decisions.md
src/: api.rs  app.rs  audio.rs  audio_spike.rs  catalog.rs  cli.rs  herdr.rs  layout.rs  lib.rs  main.rs  model.rs  runtime.rs  search.rs  settings.rs  theme.rs  ui.rs
src/app/: agent_pulse.rs
src/audio/: analyzer.rs  decoder.rs  icy.rs  output.rs  played_sample.rs  session.rs
src/runtime/: debounce.rs  (+7 more)
tests/: audio_spike.rs  binary_entry_path.rs
(+42 files in other folders)
