[package]
name = "wave-tui"
version = "0.1.3"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
  "json",
  "blocking",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
ctrlc = "3.4"
cpal = "0.16"
ringbuf = "0.4"
rustfft = "6.4"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
